--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NamJun♡HeoJiEun, Wedding invitation</title>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&display=swap');
+  </style>
   </head>
   <body>
     <div id="root"></div>
