--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NamJun♡HeoJiEun, Wedding invitation</title>
-    <style>
-      @import url('https://fonts.googleapis.com/css2?family=Gowun+Batang&family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&display=swap');
-      @import url('https://fonts.googleapis.com/css2?family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&display=swap');
+
+<head>
+  <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+
+  <title>NamJun♡HeoJiEun, Wedding invitation</title>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Gowun+Batang&family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&display=swap');
   </style>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+</head>
+
+<body oncontextmenu="return false;">
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
