--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
-  <title>NamJun♡HeoJiEun, Wedding invitation</title>
+  <title>NamJun♡HeoJiEun, Wedding</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Gowun+Batang&family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Gowun+Batang:wght@400;700&family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&family=Zen+Kurenaido&display=swap');
   </style>
 </head>
 
