--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
   <title>NamJun♡HeoJiEun, Wedding</title>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Gowun+Batang&family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Gowun+Batang&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Klee+One&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&display=swap');
-    @import url('https://fonts.googleapis.com/css2?family=Gowun+Batang:wght@400;700&family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&family=Zen+Kurenaido&display=swap');
   </style>
 </head>
 
